# mcpf-getting-started

./: .gitignore  .gitlab-ci.yml  Dockerfile-base  Dockerfile-test  README.md  constants.py  io_functions.py  mkdocs.yml  pipeline_config.yaml  pipeline_routines.py  pipeline_runtime.py  pyproject.toml
src/python/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile-cuda  README.md  docker-run-live.sh  mkdocs.yml  pyproject.toml
src/python/mcp_frm/: README.md  constants.py  fronius_use_case2.yaml  pipeline_config.yaml  pipeline_constants.py  pipeline_routines.py  pipeline_runtime.py  pipeline_singletons.py
src/python/mcp_general_functions/: README.md  coding_templates.py  constants.py  helper.py  mcp_general_db.py  mcp_general_io.py  mcp_general_transformations.py
src/python/mcp_santub/: README.md  santub_use_case1.yaml  santub_use_case2.yaml  transformation_functions.py
src/python/mcp_use_case_UPO/: EQE_computations.py  README.md  constants.py  upo_use_case1.yaml  upo_use_case2.yaml  write_data.py
src/python/mcp_use_case_csv_to_db/: README.md  csv_to_db_use_case.yaml
src/python/mcp_use_case_dot_net/: README.md  csharp_use_case1.yaml  dotnet_transformation.py  vdl_landooe_20240718.csv
src/python/mcp_use_case_fronius/: README.md  constants.py  fronius_use_case1.yaml  fronius_use_case1b.yaml  fronius_use_case2.yaml  io_functions.py  transformation_functions.py
src/python/mcp_use_case_getting_started/: README.md  first_extension.yaml  first_use_case.yaml  prepare_test_env.py  second_extension.yaml  second_extension_recursive.yaml
src/python/mcp_use_case_sim2influx/: README.md  constants.py  sim2influx_use_case.yaml  sim2timescale_use_case.yaml  transformation_functions.py
(+13 files in other folders)
